--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.0.0"
+  },
+  "dependencies": {
+    "@testing-library/react-hooks": "^7.0.2"
   }
 }
